--- a/src/yml/site.yml
+++ b/src/yml/site.yml
@@ -1,4 +1,4 @@
-name: Jekflix
+name: Viewpoint Indica
 title: Jekflix | A blog theme for Jekyll
 description: Jekflix is a template for Jekyll inspired by Netflix and made by
   Thiago Rossener.
@@ -16,11 +16,12 @@ menu:
     url: /about
   - title: Contact
     url: /contact
-  - title: Feed
-    url: /feed.xml
-email: youremail@test.com
+  # - title: Feed
+  #   url: /feed.xml
+email: viewpointindica@gmail.com
 # See: https://disqus.com/
 disqus_username: disqus_username
 # Contact Form Setting
 # See: https://formspree.io/
 formspree_form_id: formspree_form_id
+paginate: 12
